# CoolStuff

./: .gitignore  CMakeLists.txt  CoolStuff_main.cpp  README.md  Rectangle.cpp  Rectangle.hpp
